Closed Bug 1159304 Opened 9 years ago Closed 9 years ago

silence Coverity warning about implicit conversion issues in ReadAheadLib

Categories

(Core :: XPCOM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox40 --- fixed

People

(Reporter: froydnj, Assigned: froydnj)

Details

Attachments

(1 file)

      No description provided.
I was going to use something awful for the type, like
decltype(elf.ehdr.e_phoff), but that field is of type Elf_Off anyway, so it
seemed simpler to use the shorter type.
Attachment #8598726 - Flags: review?(erahm)
Comment on attachment 8598726 [details] [diff] [review]
silence Coverity warning about implicit conversion issues in ReadAheadLib

Review of attachment 8598726 [details] [diff] [review]:
-----------------------------------------------------------------

r=me
Attachment #8598726 - Flags: review?(erahm) → review+
https://hg.mozilla.org/mozilla-central/rev/84acf9f2f583
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
You need to log in before you can comment on or make changes to this bug.