Bug 1159304 - silence Coverity warning about implicit conversion issues in ReadAheadLib; r=erahm